--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,18 +2,22 @@
 <% @user.password = @user.password_confirmation = nil %>
 
 <%= error_messages_for :user %>
+
 <% form_for :user, :url => users_path do |f| -%>
-<p><%= label_tag 'login' %><br/>
-<%= f.text_field :login %></p>
+  <p><%= label_tag 'login' %><br/>
+  <%= f.text_field :login %></p>
 
-<p><%= label_tag 'email' %><br/>
-<%= f.text_field :email %></p>
+  <p><%= label_tag 'name' %><br/>
+  <%= f.text_field :name %></p>
 
-<p><%= label_tag 'password' %><br/>
-<%= f.password_field :password %></p>
+  <p><%= label_tag 'email' %><br/>
+  <%= f.text_field :email %></p>
 
-<p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
-<%= f.password_field :password_confirmation %></p>
+  <p><%= label_tag 'password' %><br/>
+  <%= f.password_field :password %></p>
 
-<p><%= submit_tag 'Sign up' %></p>
+  <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
+  <%= f.password_field :password_confirmation %></p>
+
+  <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
