--- a/app/views/papers/new.html.erb
+++ b/app/views/papers/new.html.erb
@@ -3,6 +3,29 @@
 <% form_for(@paper) do |f| %>
   <%= f.error_messages %>
 
+  <ul>
+    <li>
+      <%= f.label :title, "Title" %>
+      <%= f.text_field :title %>
+    </li>
+    
+    <li>
+      <%= f.label :description, "Description" %>
+      <%= f.text_area :description %>
+    </li>
+    
+    <li>
+      <%= f.label :minutes, "Minutes" %>
+      <%= f.text_field :minutes %>
+    </li>
+
+    <li>
+      <%= f.label :family, "Family" %>
+      <%= select_tag "paper[family]", options_for_select([ "Keynote", "Paper", "Caso de Éxito" ], "Paper") %>
+    </li>
+
+  </ul>
+  
   <p>
     <%= f.submit "Create" %>
   </p>
