* Paper Edition alpha 01 * Paper Resource upload alpha 01 * Paper Speakers edition alpha 01 * Paper Status edition alpha 01

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,11 @@
 <div class="container">
   <h1>Euruko 2009</h1>
   <hr /> 
+  
   <div class="menu-header">
-    Menu
+    <%= render :partial => 'layouts/menu_header'%>
   </div>
+  
   <div class="span-18">
     <p style="color: green"><%= flash[:notice] %></p>
     <p style="color: red"><%= flash[:error] %></p>
