--- a/app/views/layouts/_menu_admin.html.erb
+++ b/app/views/layouts/_menu_admin.html.erb
@@ -1,5 +1,6 @@
 <ul>
   <li><%= link_to 'Tu perfil', user_path( current_user ) %></li>
+  <li><%= link_to 'Propose a Paper', new_paper_path %></li>
   <li><%= link_to 'Pay!', shoping_cart_path %></li>
   <li><%= link_to 'User Searcher', user_searcher_path %></li>
   <li><%= link_to 'Configurar Calendario', calendar_conf_path %></li>
