--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -3,10 +3,40 @@
 <% form_for(@paper) do |f| %>
   <%= f.error_messages %>
 
+  <%= render :partial => 'basic_form', :locals => { :f => f } %>
+
   <p>
-    <%= f.submit "Update" %>
+    <%= f.submit "Update attributes above" %>
   </p>
 <% end %>
+
+<h3>Speakers</h3>
+<%= render :partial => 'speakers_edit', :locals => { :paper => @paper } %>
+
+<h3>Status</h3>
+<p>
+  <strong><%= @paper.status %></strong>
+  go to 
+  <%= 
+    link_to(
+      Paper::STATUS[:ACEPTED], 
+      update_status_paper_path( @paper, :status => Paper::STATUS[:ACEPTED] ),
+      :method => 'put'
+    )
+  %>
+  or
+  <%= 
+    link_to(
+      Paper::STATUS[:DECLINED], 
+      update_status_paper_path( @paper, :status => Paper::STATUS[:DECLINED] ),
+      :method => 'put'
+    )
+  %>
+</p>
+
+<h3>Resources</h3>
+<%= render :partial => 'resources_edit', :locals => { :paper => @paper } %>
+  
 
 <%= link_to 'Show', @paper %> |
 <%= link_to 'Back', papers_path %>
