--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,13 @@
+<h2><%= @user.name %></h2>
+<%= simple_format( @user.text ) %>
+<p>
+  <%= link_to @user.personal_web_name, @user.personal_web_url %>
+</p>
+
+<p>
+  And works at <%= link_to @user.company_name, @user.company_url %>
+</p>
+
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
