--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,10 @@
 
   <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
   <%= f.password_field :password_confirmation %></p>
-
+  
+  <p><%= f.check_box :public_profile %>
+  <%= label_tag 'public_profile', 'Public Profile' %>
+  </p>
+  
   <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
