--- a/app/views/papers/_votes.html.erb
+++ b/app/views/papers/_votes.html.erb
@@ -1,4 +1,4 @@
-<% @vote = Vote.find_by_paper_id_and_user_id( paper.id, current_user.id ) %>
+<% @vote = vote_find_actual( @paper.id ) %>
 
 <% if @vote.nil?%>
   <ul>
