--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -3,8 +3,8 @@
 <h3>Speakers</h3>
 <p>
   <ul>
-      <% @paper.user_speakers.each do |us| %>
-        <li><%= link_to us.name, us %></li>
+      <% @paper.speakers.each do |s| %>
+        <li><%= link_to s.user.name, s.user %></li>
       <% end %>
   </ul>
 </p>
@@ -37,17 +37,17 @@
 </p>
 <h4>My valoration</h4>
 <p>
-  <%= render :partial => 'votes', :locals => { :paper => @paper } %>
+  <%= render :partial => 'papers/votes', :locals => { :paper => @paper } %>
 </p>
 
 <h3>Attendees</h3>
 <div>
   <ul>
     <% @paper.attendees.each do |attendee| %>
-      <li><%= attendee.name %></li>
+      <li><%= attendee.user.name %></li>
     <% end %>
   </ul>
-  <%= render :partial => 'attendees', :locals => { :paper => @paper } %>  
+  <%= render :partial => 'papers/attendees', :locals => { :paper => @paper } %>  
 </div>
 
 <h3>Comments</h3>
