--- a/app/views/partials/_admin_menu.html.erb
+++ b/app/views/partials/_admin_menu.html.erb
@@ -4,5 +4,6 @@
   <li><%= link_to 'Pay!', shoping_cart_path %></li>
   <li><%= link_to 'User Searcher', user_searcher_path %></li>
   <li><%= link_to 'Configurar Calendario', calendar_conf_path %></li>
+  <li><%= link_to 'Rooms', rooms_path %></li>
   <li><%= link_to 'Logout', logout_path %></li>
 </ul>
