--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,11 +1,9 @@
 <h1>Listing rooms</h1>
 
 <table>
+<% @rooms.each do |room| %>
   <tr>
-  </tr>
-
-<% for room in @rooms %>
-  <tr>
+    <td><%= room.name %></td>
     <td><%= link_to 'Show', room %></td>
     <td><%= link_to 'Edit', edit_room_path(room) %></td>
     <td><%= link_to 'Destroy', room, :confirm => 'Are you sure?', :method => :delete %></td>
