--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,8 +1,8 @@
 <h1>New room</h1>
 
 <% form_for(@room) do |f| %>
-  <%= f.error_messages %>
-
+  <%= render :partial => 'form', :locals => { :f => f } %>
+  
   <p>
     <%= f.submit "Create" %>
   </p>
