* Paper date and room management * Init Calendar basic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
     <!--[if IE]> 
       <%= stylesheet_link_tag 'ie', :media => "screen, projection" %>  
     <![endif]-->
+    
+    <%= javascript_include_tag :defaults %>
+    
+    <!-- datepicker -->
+    <link rel="stylesheet" href="http://ui.jquery.com/latest/themes/flora/flora.datepicker.css" type="text/css" media="screen" title="Flora (Default)">
+    <script src="http://ui.jquery.com/latest/ui/ui.datepicker.js"></script>
+    <!-- datepicker -->
+
+
+    
   </head>
 
   <body>
