--- a/app/views/papers/_basic_form.html.erb
+++ b/app/views/papers/_basic_form.html.erb
@@ -17,5 +17,31 @@
   <li>
     <%= f.label :family, "Family" %>
     <%= select( "paper", "family", Paper::FAMILY.values ) %>
-  </li>
+  </li>  
 </ul>
+
+<div>
+  <h3>Room and Calendar</h3>
+  <p>
+    <%= f.label :room_id, "Room" %>
+    <%=
+      select(
+        'paper', 
+        'room_id', 
+        Room.find(:all).collect {|r| [ r.name, r.id ] },
+        { :include_blank => true }
+      )
+    %>
+  </p>
+  <p>
+    <%= f.label :date_form, "Date" %>
+    <%= f.text_field :date_form %>
+    <script>
+      $('#paper_date_form').datepicker({firstDay: 1, dateFormat: 'yy/mm/dd' });
+    </script>
+  </p>
+  <p>
+    <%= f.label :time_form, "Time" %>
+    <%= select( 'paper', 'time_form', times_array( '08', '20' ), { :include_blank => true } ) %>
+  </p>
+</div>
