--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="menu">
   <ul>
     <li><%= link_to 'Blog' %></li>
-    <li><%= link_to 'Calendar' %></li>
+    <li><%= link_to 'Calendar', calendar_path %></li>
     <li><%= link_to 'Papers', papers_path %></li>
     <li><%= link_to 'Speakers' %></li>
     <li><%= link_to 'Users', users_path %></li>
