--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -3,7 +3,7 @@
     <li><%= link_to 'Blog' %></li>
     <li><%= link_to 'Calendar', calendar_path %></li>
     <li><%= link_to 'Papers', papers_path %></li>
-    <li><%= link_to 'Speakers' %></li>
+    <li><%= link_to 'Speakers', users_path( :speakers => :true )%></li>
     <li><%= link_to 'Users', users_path %></li>
     <li><%= link_to 'Intrucciones' %></li>
   </ul>
