dynamic shopping_cart

--- a/app/views/partials/_user_menu.html.erb
+++ b/app/views/partials/_user_menu.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <li><%= link_to 'Tu perfil', user_path( current_user ) %></li>
-  <li><%= link_to 'Pay!', shoping_cart_path %></li>
+  <li><%= link_to 'Pay!', new_shoping_cart_path %></li>
   <li><%= link_to 'Propose a Paper', new_paper_path %></li>
   <li><%= link_to 'Logout', logout_path %></li>
 </ul>
