--- a/app/views/partials/_admin_menu.html.erb
+++ b/app/views/partials/_admin_menu.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <li><%= link_to 'Tu perfil', user_path(current_user) %></li>
   <li><%= link_to 'Propose a Paper', new_paper_path %></li>
-  <li><%= link_to 'Pay!', new_shoping_cart_path %></li>
+  <li><%= link_to 'Pay!', new_shopping_cart_path %></li>
   <li><%= link_to 'User Searcher', users_path %></li>
   <li><%= link_to 'Configurar Calendario', calendar_path %></li>
   <li><%= link_to 'Rooms', rooms_path %></li>
