--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <div id="euruko" class="canvas showgrid">
+    <div id="euruko" class="canvas"> <!-- showgrid -->
       <div id="header" class="span-24 last">
         <h1>Euruko 2009</h1>
         <%= render :partial => 'partials/menu' %>
