--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,17 @@
 
 <% for user in @users %>
   <tr>
+    <td>
+      <%=
+        gravatar(
+          user.email, 
+          :size => 32, 
+          :default => "#{base_url}/images/avatar.png",
+          :class => 'avatar',
+          :alt => "avatar de #{user.name}"
+        )
+      %>
+    </td>
     <td><%= user.name %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
