--- a/app/views/partials/_admin_menu.html.erb
+++ b/app/views/partials/_admin_menu.html.erb
@@ -5,5 +5,6 @@
   <li><%= link_to 'User Searcher', users_path %></li>
   <li><%= link_to 'Configurar Calendario', calendar_path %></li>
   <li><%= link_to 'Rooms', rooms_path %></li>
+  <li><%= link_to 'Exceptions', :controller => 'logged_exceptions' %></li>
   <li><%= link_to 'Logout', logout_path %></li>
 </ul>
