--- a/app/views/papers/_resources_edit.html.erb
+++ b/app/views/papers/_resources_edit.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <% paper.resources.each do |resource| %>
       <li>
-        <%= link_to resource.url, resource.url %>
+        <%= link_to resource.url_link, resource.url_link %>
         <%= link_to 'delete', paper_resource_path( paper, resource ), :method => :delete %>
       </li>
     <% end %>
