--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -5,6 +5,6 @@
     <li><%= link_to 'Papers', papers_path %></li>
     <li><%= link_to 'Speakers', users_path( :speakers => :true )%></li>
     <li><%= link_to 'Users', users_path %></li>
-    <li><%= link_to 'Intrucciones' %></li>
+    <li><%= link_to 'Help' %></li>
   </ul>
 </div>
