--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -1,10 +1,17 @@
 <ul>
+<% if logged_in? %>
   <li><%= link_to 'Tu perfil', user_path(current_user) %></li>
-  <li><%= link_to 'Propose a Paper', new_paper_path %></li>
   <li><%= link_to 'Pay!', cart_path %></li>
+  <li><%= link_to 'Propose a Paper', new_paper_path %></li>
+  <% if admin? %>
   <li><%= link_to 'User Searcher', users_path %></li>
-  <li><%= link_to 'Configurar Calendario', calendar_path %></li>
+  <li><%= link_to 'Configure Calendar', calendar_path %></li>
   <li><%= link_to 'Rooms', rooms_path %></li>
   <li><%= link_to 'Exceptions', :controller => 'logged_exceptions' %></li>
+  <% end %>
   <li><%= link_to 'Logout', logout_path %></li>
+<% else %>
+  <li><%= link_to 'Register!', new_user_path %></li>
+  <li><%= link_to 'Login', new_session_path %></li>
+<% end %>
 </ul>
