--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -2,9 +2,9 @@
   <ul>
     <li><%= link_to 'Blog' %></li>
     <li><%= link_to 'Calendar', calendar_path %></li>
-    <li><%= link_to 'Papers', papers_path %></li>
+    <li><%= link_to 'Talks', papers_path %></li>
     <li><%= link_to 'Speakers', users_path( :speakers => :true )%></li>
-    <li><%= link_to 'Users', users_path %></li>
+    <li><%= link_to 'People', users_path %></li>
     <li><%= link_to 'Help' %></li>
   </ul>
 </div>
