--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -2,7 +2,7 @@
 <% if logged_in? %>
   <li><%= link_to 'Tu perfil', user_path(current_user) %></li>
   <li><%= link_to 'Pay!', cart_path %></li>
-  <li><%= link_to 'Propose a Paper', new_paper_path %></li>
+  <li><%= link_to 'Submit talk', new_paper_path %></li>
   <% if admin? %>
   <li><%= link_to 'User Searcher', users_path %></li>
   <li><%= link_to 'Configure Calendar', calendar_path %></li>
