--- a/app/views/stylesheets/typography.sass
+++ b/app/views/stylesheets/typography.sass
@@ -165,13 +165,12 @@ sup
   vertical-align: text-top 
 
 a
-  color: #CC3300
+  color: #000099
   font-weight: bold
-  text-decoration: none
 
 a:focus, a:hover
-  color: #CC3300
-  text-decoration: underline
+  color: #0000FF
+  border-bottom: none
 
 h1 img, h2 img, h3 img, h4 img, h5 img, h6 img
   margin: 0 
