--- a/app/views/papers/_attendees.html.erb
+++ b/app/views/papers/_attendees.html.erb
@@ -1,10 +1,36 @@
-<% if !current_user.nil? %>
-  <% @attendee = Attendee.find_by_paper_id_and_user_id( @paper.id, current_user.id ) %>
-  <p>
-    <% if !@attendee.nil? %>
-      <%= link_to 'I don\'t go', paper_attendee_path( @paper, @attendee ), :method => :delete %>
-    <% else %>
-      <%= link_to 'I go', paper_attendees_path( @paper ), :method => :post %>
-    <% end %>
-  </p>
-<% end %>
+<div id="attendee">
+  <% if !current_user.nil? %>
+    <% @attendee = Attendee.find_by_paper_id_and_user_id( @paper.id, current_user.id ) %>
+    <p>
+      <% if !@attendee.nil? %>
+        <%= 
+          link_to_remote(
+            'I don\'t go',
+            :url => paper_attendee_path( @paper, @attendee ), 
+            :method => :delete,
+            :update => { :success => "attendee", :failure => "attendee_error" },
+            :loading => "$('#attendee_loading').show()",
+            :complete => "$('#attendee_loading').hide()"
+          ) 
+        %>
+      <% else %>
+        <%= 
+          link_to_remote(
+            'I go',
+            :url => paper_attendees_path( @paper ), 
+            :method => :post,
+            :update => { :success => "attendee", :failure => "attendee_error" },
+            :loading => "$('#attendee_loading').show()",
+            :complete => "$('#attendee_loading').hide()"
+          ) 
+        %>
+      <% end %>
+    </p>
+  
+    <div id='attendee_loading' style="display:none">
+      <%= image_tag 'spinner.gif' %>
+    </div>
+    <div id='attendee_error'>
+    </div>
+  <% end %>
+</div>
