--- a/app/views/papers/_votes.html.erb
+++ b/app/views/papers/_votes.html.erb
@@ -1,21 +1,28 @@
 <% if !current_user.nil? %>
   <% @vote = vote_find_actual( @paper.id ) %>
 
-  <% if @vote.nil?%>
     <ul>
       <% (1..5).each do |points| %>
-        <li><%= link_to points, paper_votes_path( @paper, :points => points ), :method => 'post'%></li>
-      <% end %>
-    </ul>
-  <% else %>
-    <ul>
-      <% (1..5).each do |points| %>
-        <% if @vote.points != points %>
-          <li><%= link_to points, paper_vote_path( @paper, @vote, :points => points ), :method => 'put'%></li>
+        <% if @vote.nil? || (@vote.points != points) %>
+          <li>
+            <%= 
+              link_to_remote(
+                "#{points}", 
+                :url => paper_votes_path( @paper, :points => points ), 
+                :method => 'post',
+                :update => { :success => "valorations", :failure => "error" },
+                :loading => "$('#valoration_loading').show()",
+                :complete => "$('#valoration_loading').hide()"
+              )
+            %>
+          </li>
         <% else %>
           <li><%= points %></li>
         <% end %>
       <% end %>
     </ul>
-  <% end %>
+    <div id='valoration_loading' style="display:none">
+      <%= image_tag 'spinner.gif' %>
+    </div>
+
 <% end %>
