add some style here and there, still need to fix some listings, calendar view and apply euruko s artwork

--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -1,6 +1,6 @@
 <ul>
-  <li><%= link_to 'User Searcher', users_path %></li>
-  <li><%= link_to 'Configure Calendar', calendar_path %></li>
-  <li><%= link_to 'Rooms', rooms_path %></li>
-  <li><%= link_to 'Exceptions', :controller => 'logged_exceptions' %></li>
+  <li><%= link_to_unless_current 'User Searcher', users_path %></li>
+  <li><%= link_to_unless_current 'Configure Calendar', calendar_path %></li>
+  <li><%= link_to_unless_current 'Rooms', rooms_path %></li>
+  <li><%= link_to_unless_current 'Exceptions', :controller => 'logged_exceptions' %></li>
 </ul>
