--- a/app/views/stylesheets/forms.sass
+++ b/app/views/stylesheets/forms.sass
@@ -1,30 +1,31 @@
 label
+  font-family: Lucida, Arial
+  font-size: 1em
   font-weight: bold
+  color: #000
 
 fieldset
   padding: 1.4em
   margin: 0 0 1.5em 0
-  border: 1px solid #ccc
+  border: 1px solid #CCC
 
-legend
-  font-weight: bold
-  font-size: 1.2em
-
-input.text, input.title, textarea, select
-  margin: 0.5em 0
-  border: 1px solid #BBB
-
-input.text:focus, input.title:focus, textarea:focus, select:focus
-  border: 1px solid #666
-
-input.title
-  font-size: 1.5em
-
-input.text, input.title
-  width: 300px
-  padding: 5px
+input[type="text"], input[type="password"]
+  font-size: 1.25em
+  padding: 4px
+  background: #FFF
+  color: #555
+  border: 1px solid #CCC
+  width: 65%
 
 textarea
-  width: 390px
-  height: 250px
+  width: 65%
+  height: 100px
   padding: 5px
+  border: 1px solid #CCC
+  color: #555
+
+input[type="text"]:focus, input[type="password"]:focus, textarea:focus
+  background: #FFFBCA
+  color: #000
+  border: 1px solid #BBB
+
