--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -2,7 +2,9 @@
   <li><%= menu_to 'Calendar', calendar_path %></li>
   <li>
     <%= menu_to 'Talks', papers_path %>
-    <%= link_to_unless_current '(Submit yours)', new_paper_path %>
+    <% if logged_in? %>
+      <%= link_to_unless_current '(Submit yours)', new_paper_path %>
+    <% end %>
   </li>
   <li><%= menu_to 'People', users_path %></li>
   <li><%= menu_to 'Blog', 'http://euruko2009.org' %></li>
