--- a/app/views/stylesheets/typography.sass
+++ b/app/views/stylesheets/typography.sass
@@ -10,17 +10,25 @@ h1, h2, h3, h4, h5, h6
 
 h1
   font-size: 2em
-  line-height: 1.5 
+  line-height: 1.5
+  font-weight: bold
 
 h2
-  font-size: 1.75em
-  line-height: 1.75
+  font-size: 1.5em
+  line-height: 1
+  padding-bottom: 0.5em
+  margin-bottom: 1em
+  font-weight: bold
+  color: #222
 
 h3
-  font-size: 1em
+  font-size: 1.15em
+  padding: 0.5em
   font-weight: bold
-  line-height: 2.25
-  color: #222
+  line-height: 1
+  margin: 2em 0 1em 0
+  background: #EEE
+  color: #333
 
 h4
   font-size: 0.85em
@@ -116,15 +124,14 @@ ol ul, ul ol, ul ul, ol ol
 
 table 
   width: 100%
-  margin: 0 0 1.5em 0
 
 caption 
   font-size: 1em
   line-height: 3em
 
-thead th, tbody td, tfoot td 
-  padding-left: 0.5em
-  border-left: 1px solid #DDD
+thead th, tbody td, tfoot td
+  padding-top: 5px
+  border-bottom: 1px solid #EEE
 
 thead th
   background: #EEE
@@ -136,14 +143,6 @@ tbody .odd
 
 tbody .even
   background: #EDF3FE 
-
-tfoot td 
-  font-size: 1em
-  line-height: 1.5em
-  background: #EEE
-  font-size: 0.95em
-  color: #555
-  font-style: italic
 
 strong
   font-weight: bold 
