events and room admin

--- a/app/views/carts/confirm.html.erb
+++ b/app/views/carts/confirm.html.erb
@@ -2,7 +2,7 @@
   <ul>
   <% @cart.events.each do |event| %>
     <li>        
-      <%= event.name %> (<%= event.price_euros %>€)
+      <%= link_to event.name, event_path(event) %> (<%= event.price_euros %>€)
     </li>
   <% end %>
   </ul>
