--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,6 +6,7 @@
 
 <% for event in @events %>
   <tr>
+    <td><%= event.name %></td>
     <td><%= link_to 'Show', event %></td>
     <td><%= link_to 'Edit', edit_event_path(event) %></td>
     <td><%= link_to 'Destroy', event, :confirm => 'Are you sure?', :method => :delete %></td>
