--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,6 @@
+<h2><%= @event.name %> (<%= @event.price_euros %>€)</h2>
+<%= simple_format( @event.description ) %>
+
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
