--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,7 +1,7 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :naem %><br />
+    <%= f.label :name %><br />
     <%= f.text_field :name %>
   </p>
   <p>
