--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,7 +4,7 @@
       <% if event.is_paid_for_user?( current_user ) %>
         <li class="paid">
           X
-          <%= event.name %> (<%= event.price_euros %>€)
+          <%= link_to event.name, event_path(event) %> (<%= event.price_euros %>€)
         </li>
       <% else %>
         <li>
@@ -25,7 +25,7 @@
             )
           %>
         
-          <%= event.name %> (<%= event.price_euros %>€)
+          <%= link_to event.name, event_path(event) %> (<%= event.price_euros %>€)
         </li>
       <% end %>
     <% end %>
