--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -11,7 +11,9 @@
 <% end %>
 
 <h3>Speakers</h3>
-<%= render :partial => 'speakers_edit', :locals => { :paper => @paper } %>
+<div id="speakers">
+  <%= render :partial => 'speakers_edit', :locals => { :paper => @paper } %>
+</div>
 
 <h3>Status</h3>
 <%= render :partial => 'status_edit', :locals => { :paper => @paper } %>
